--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Jeffrey A. Newman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,62 +17,83 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
-					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1><a href="#">Jeffrey A. Newman</a></h1>
+					<p>Professor, <a href="https://www.phyast.pitt.edu">Department of Physics and Astronomy</a> and <a href="https://www.pittpacc.pitt.edu/"> PITT PACC</a><br>
+					  The University of Pittsburgh<br>
+	<!--				<em>janewman "at" pitt.edu</em></p>   -->
 					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
+						<li><a target="_blank" href="images/cv18_full.pdf" class="button primary icon solid fa-download" download>Curriculum Vitae</a></li>
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image right"><div class="inner"><img src="images/headshot.jpg" alt="" align="middle"/></div></div>
 			</header>
 
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h3>I work in the fields of cosmology - the study of the Universe as a whole, its history and contents -  as well as the formation of galaxies and their development over time.  I primarily use large statistical, “survey” datasets, generally assembled by international teams of astrophysicists.<br>  My current areas of focus include:</h3>
 				</header>
+
+<!--
 				<ul class="icons major">
 					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
 					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
 					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
 				</ul>
+-->
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
+						<div class="image"><img src="images/desinight.png" alt="DESI" /></div>
 						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h4>The Dark Energy Spectrocopic Instrument Survey</h4>
+							<p>The <a title="http://desi.lbl.gov/" href="http://desi.lbl.gov/">DESI</a> (Dark Energy Spectroscopic Instrument) project is using a new instrument on the <a title="https://www.noao.edu/outreach/kpt\
+																											      our/mayall.html" href="https://www.noao.edu/outreach/kptour/mayall.html">Mayall Telescope</a> to map out the large-scale structure of the Universe traced out by distant galaxies and quasars up to 12 billion years in the past, allowing us to explore the unknown nature of <a title="http://science.nasa.gov/astrophysics/focus-areas/what-is-dark-energy/" href="http://science.nasa.gov/astrophysics/focus-areas/what-is-dark-energy/">Dark Energy</a> via the Baryon Acoustic Oscillation (BAO) method (see <a title="http://www.symmetrymagazine.org/article/december-2013/baryonic-acoustic-oscillations" href="http://www.symmetrymagazine.org/article/december-2013/baryonic-acoustic-oscillations">this article I wrote</a> for a “60 second” explanation of the technique written for non-experts). DESI's map ofroughly 50 million galaxies will represent more than a ten-fold improvement over prior projects.  In preparation for DESI, I worked on <a title="https://www.sdss3.org/future/eboss.php" href="https://www.sdss3.org/future/eboss.php" class="style_1">eBOSS</a>, the Extended Baryon Oscillation Sky Survey, a component of the Sloan Digital Sky Survey IV which recently completed operations.  My work on DESI and eBOSS has been supported by the U.S. Department of Energy Office of Science, Office of High Energy Physics. </p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
+						<div class="image"><img src="images/lsst_recent.png" alt="" /></div>
 						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>The Vera C. Rubin Observatory</h3>
+							<p>I have been working on preparations for the <a title="http://www.lsst.org/lsst/" href="http://www.lsst.org/" class="style">Vera C. Rubin Observatory Legacy Survey of Space and Time</a> (LSST) for more than a decade. The Rubin Observatory is now under construction in Chile (an artist’s conception is at right).  The LSST will survey the entire visible sky every few nights for 10 years, revealing what changes from night to night (e.g., asteroids that might hit the Earth, which move across the sky) while simultaneously providing rich information on billions of galaxies, allowing precision studies of dark energy. In the LSST <a title="http://arxiv.org/abs/1211.0310" href="http://arxiv.org/abs/1211.0310">Dark Energy Science Collaboration</a>, I have served in the past as co-convener of the Photometric Redshifts Working Group (see <a title="http://arxiv.org/abs/1309.5384" href="http://arxiv.org/abs/1309.5384">our white paper</a> on calibration requirements!), the Analysis Coordinator, and the Deputy Spokesperson (the Spokesperson is the elected leader of a high energy physics collaboration); I currently am co-convener of the External Synergies Working Group.   My work on the Rubin Observatory LSST has been supported by the U.S. Department of Energy Office of Science, Office of High Energy Physics.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/mwas2.png" alt="" /></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Studying the Milky Way using Analog Galaxies</h3>
+							<p>In January 2012, Timothy Licquia and I presented a new determination of the color of the Milky Way Galaxy we live in. We found that to an observer from another galaxy, our own would appear as a smudge of a nearly pure shade of white. Our result can be expressed compactly in haiku form:<br /><br />
+                    Look at new spring snow - <br />See the River of Heaven <br />An hour after dawn.<br /><br />
+                  If you’d like more information see the University of Pittsburgh's <a title="http://www.news.pitt.edu/milkywaycolor" href="http://www.news.pitt.edu/milkywaycolor">press release</a>, including images of Milky Way analogs: galaxies that should resemble the one we live in, but as seen from outside.  Images of a few of these analogous galaxies -- each a system containing hundreds of billions of stars and planets - are featured at left, or for more technical details see <a href="https://ui.adsabs.harvard.edu/search/q=docs(9f486d448c3e7e8d4c8a4882f48975d2)&sort=date%20desc%2C%20bibcode%20desc&p_=0"> our papers.  Our work on Milky Way Analogs has been supported by the National Science Foundation and NASA.</a></p>
 						</div>
 					</section>
-					<section class="special">
+										<section class="spotlight">
+						<div class="image"><img src="images/ngc4603.png" alt="" /></div>
+						<div class="content">
+							<h3>Other Projects</h3>
+							<p>I have worked on a variety of other survey projects in the past, including the <a title="http://deep.ps.uci.edu/" href="http://deep.ps.uci.edu/">DEEP2 Galaxy Redshift Survey</a> (the largest project ever undertaken on the world-leading Keck Telescopes), the follow-on <a href="http://deep.ps.uci.edu/deep3/home.html"> DEEP3 Survey</a>, and the <a title="http://aegis.ucolick.org/" href="http://aegis.ucolick.org/">AEGIS</a> multiwavelength survey.  I served as Publications Coordinator for <a title="https://archive.stsci.edu/prepds/candels/" href="https://archive.stsci.edu/prepds/candels/" class="style">CANDELS</a> (the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey), the largest project undertaken on the Hubble Space Telescope to date (with roughly three months of observing time). CANDELS provided our first comprehensive census of the demographics of galaxies as they were 10-13 billion years in the past, for comparison to those seen today.<br /><br />
+							  I have produced a publicly available IDL sample variance / cosmic variance calculator, <a title="http://www.phyast.pitt.edu/~janewman/quickcv/quickcv.tar.gz" href="http://www.phyast.pitt.edu/%7Ejanewman/quickcv/quickcv.tar.gz">QUICKCV</a>, based on work published in <a title="https://iopscience.iop.org/article/10.1086/324148" href="https://iopscience.iop.org/article/10.1086/324148">this paper</a>; Ben Moster has produced <a title="https://www.usm.uni-muenchen.de/people/moster/home/download.html" href="https://www.usm.uni-muenchen.de/people/moster/home/download.html"> an updated version.</a><br /><br />
+Looking towards the future, I am also part of a Science Investigation Team for the Wide Field Infrared Survey Telescope (WFIRST) satellite which is led by Saul Perlmutter.		
+							</p>
+						</div>
+					</section>
+										<section class="special">
+		<h2>Contact Information</h2>
 						<ul class="icons labeled">
-							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
-						</ul>
+<li><span class="icon solid fa-at"><span class="label">janewman "AT" pitt.edu</span></span></li>
+<br />
+<li><span class="icon solid fa-mobile-alt"><span class="label">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; (412) 592-3853</span></span></li>
+<br />
+<li><span class="icon solid fa-envelope"><span class="label">Jeffrey Newman<br />
+Department of Physics <br />&nbsp;&nbsp;&nbsp;&nbsp; and Astronomy<br />
+University of Pittsburgh<br />
+310 Allen Hall<br />
+3941 O'Hara St.<br />
+Pittsburgh, PA 15260</span></span></li>
 					</section>
 				</div>
 			</section>
@@ -80,13 +101,14 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
+					<h2>Links</h2>
+<!--					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
 					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
+-->
 				</header>
 				<ul class="actions special">
-					<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
+				  <li><a target="_blank" href="images/cv18_full.pdf" class="button primary icon solid fa-download" download">Curriculum Vitae</a></li>												    <li><a target="_blank" href="https://ui.adsabs.harvard.edu/search/q=collection%3Aastronomy%20AND%20(author%3A(%22Newman%2C%20J.%22%20%20or%20%22Newman%2C%20Jeffrey%20A.%22%20or%20%22Newman%2C%20Jefrey%22)%20%20OR%20orcid%3A%220000-0001-8684-2222%22)%20AND%20NOT%20bibstem%3A(%22GeoRL%22%20or%20%22ESASP%22%20or%20%22AdSpR%22%20or%20%22AGUFM%22%20or%20%22LPI%22%20or%20%22LPICo%22%20or%20%22CMAME%22)%20AND%20pubdate%3A[1997-01%20TO%209999-12]%20&sort=date%20desc%2C%20bibcode%20desc&p_=0" class="button primary icon solid fa-download" download">My publications</a></li>
+				  <li><a target="_blank" href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=OR&terms-0-term=Newman%2C+Jeffrey+A.&terms-0-field=author&terms-1-operator=OR&terms-1-term=0000-0001-8684-2222&terms-1-field=orcid&terms-2-operator=OR&terms-2-term=Newman%2C+J.&terms-2-field=title&terms-3-operator=OR&terms-3-term=Newman%2C+J.+A.&terms-3-field=title&terms-4-operator=OR&terms-4-term=Newman%2C+Jeffrey&terms-4-field=title&classification-physics=y&classification-physics_archives=astro-ph&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=200&order=-announced_date_first" class="button primary icon solid fa-download" download">My preprints</a></li>
 				</ul>
 			</section>
 
@@ -411,12 +433,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="icons">
+<!--				<ul class="icons">
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+-->
+				<p class="copyright">&copy; Jeffrey Newman. Images: DESI/NOAO; Rubin Observatory; J. Newman; J. Newman & STScI.  Template: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
